# supertrader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  sentiment_lexicon.yaml  ticker_blocklist.yaml
configs/runs/: rsm_v1_backtest.yaml  rsm_v1_backtest_2x_cost.yaml  rsm_v1_backtest_3x_cost.yaml  rsm_v1_backtest_momentum.yaml  rsm_v1_q1_2024.yaml  smoke.yaml  v2_tech_momentum.yaml  v2_tech_reversal.yaml  v2_tech_volume_surge.yaml
configs/signals/: reddit_sentiment_v1.yaml
configs/universe/: snapshot_2026_05_14.csv  snapshot_sp500_2026_05_14.csv
docs/: dev-notes.md  known-limitations.md  retrospective.md
docs/adr/: 0001-vectorbt-as-engine.md  0002-arctic-shift-for-history.md  0003-redline-boundary.md  0004-static-universe-v1.md  0005-rsm-hyperparam-search.md  0006-sentiment-scorer-pluggable.md  0008-paid-data-sources.md  0009-event-signal-shape.md  0010-cost-model-v2.md  0011-backtest-split-config.md  0012-pit-universe-and-manifest.md
docs/postmortem/: rsm-v1.md  v2-tech.md
docs/templates/: verdict-rsm-v1.md
docs/verdicts/: rsm-v1-backtest.md  v2-tech-comparison.md
research/: README.md
scripts/: backfill_prices.py  backfill_wsb.py  check_holdout_log_untouched.sh  decompose_by_sector.py  decompose_test_quarters.py  reset_holdout_lock.py  smoke_arctic_shift.py  validate_sentiment_signal.py  verify_corp_actions.py
src/supertrader/: __init__.py  cli.py
src/supertrader/backtest/: __init__.py  borrow.py  costs.py  engine.py  metrics.py  report.py  sector_decomp.py  slippage.py  splits.py
src/supertrader/backtest/templates/: tear_sheet.html.j2
src/supertrader/config/: __init__.py  loader.py  registry.py  schemas.py
src/supertrader/data/: __init__.py  base.py  calendar.py  store.py  universe.py
src/supertrader/data/sources/: __init__.py  earnings_polygon.py  form4_redline.py  prices_polygon.py  prices_yfinance.py  reddit_arctic_shift.py  universe_eodhd.py
src/supertrader/execution/: __init__.py  base.py
src/supertrader/observability/: __init__.py  run_manifest.py
src/supertrader/pipelines/: __init__.py  run_backtest.py
src/supertrader/signals/: __init__.py  base.py
src/supertrader/signals/form4_clusters/: __init__.py
src/supertrader/signals/reddit_sentiment/: __init__.py  scorer_base.py  scorer_finbert.py  scorer_llm.py  scorer_vader.py  signal.py  ticker_extract.py
src/supertrader/signals/technical/: __init__.py  ma_cross.py  momentum.py  percent_change.py  reversal.py  rsi.py  volume_surge.py
src/supertrader/strategies/: __init__.py  base.py  mean_reversion.py  risk.py  threshold.py
tests/: conftest.py
tests/e2e/: test_rsm_v1_smoke.py
tests/golden/: known_splits.csv
tests/golden/tear_sheets/: rsm_v1_smoke_synthetic.json
tests/integration/: test_corp_actions_verify.py  test_parquet_store.py  test_reddit_arctic_shift.py  test_reddit_sentiment_signal_e2e.py  test_reset_holdout_lock.py  test_tear_sheet_regression.py  test_yfinance_source.py
tests/unit/: test_base_abstractions.py  test_calendar.py  test_config_loader.py  test_config_registry.py  test_config_schemas.py  test_cost_models.py  test_engine.py  test_layer_boundaries.py  test_mean_reversion.py  test_metrics.py  test_point_in_time_view.py  test_reddit_sentiment_signal.py  test_report.py  test_run_manifest.py  test_scorer_stubs.py  test_scorer_vader.py  test_sector_decomp.py  test_signal_lookahead.py  test_smoke.py  test_splits.py  test_strategy_universe_guard.py  test_technical_lookahead.py  test_technical_ma_cross.py  test_technical_momentum.py  test_technical_percent_change.py  test_technical_reversal.py  test_technical_rsi.py  test_technical_volume_surge.py  test_threshold_strategy.py  test_ticker_extract.py  test_universe.py
